# autodoc

./: .env.example  .gitignore  .windsurfrules  LICENSE  PRD.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.sh
autodocai/: __init__.py  cli.py  config.py  notifications.py  orchestrator.py  schemas.py
autodocai/agents/: __init__.py  base.py  code_parser_agent.py  docstring_enhancer_agent.py  documentation_builder_agent.py  docusaurus_formatter_agent.py  docusaurus_formatter_agent.py.bak  docusaurus_formatter_agent_methods.py  mermaid_diagram_agent.py  rag_query_agent.py  repo_cloner_agent.py  summarizer_agent.py  translation_agent.py
autodocai/code_parser/: __init__.py  python_parser.py
autodocai/notification/: notifications.py
autodocai/repo_manager/: __init__.py  github_repo.py
tests/: __init__.py  conftest.py  test_integration.py
tests/agents/: __init__.py  test_docstring_enhancer_agent.py  test_documentation_builder_agent.py  test_docusaurus_formatter_agent.py  test_mermaid_diagram_agent.py
